--- a/01-color-flipper/setup/hex.html
+++ b/01-color-flipper/setup/hex.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Color Flipper || Simple
+      Color Flipper || Hex
     </title>
 
     <!-- styles -->
@@ -14,7 +14,7 @@
   <body>
     <nav>
       <div class="nav-center">
-        <h4>color flipper</h4>
+        <h4>hexadecimal color flipper</h4>
         <ul class="nav-links">
           <li><a href="index.html">simple</a></li>
           <li><a href="hex.html">hex</a></li>
