--- a/03-reviews/setup/index.html
+++ b/03-reviews/setup/index.html
@@ -3,18 +3,46 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Starter</title>
+    <title>Reviews project</title>
     <!-- font-awesome -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
     />
-
+    
     <!-- styles -->
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <h1>review project</h1>
+    <main>
+      <section class="container">
+        <!-- title -->
+        <div class="title">
+          <h2>Our Reviews</h2>
+          <div class="underline"></div>
+        </div>
+        <!-- review -->
+        <article class="review">
+          <div class="img-container">
+            <img src="./person-1.jpeg" alt="Person" id="person-img">
+          </div>
+          <h4 id="author">Sara Jones</h4>
+          <p id="job">ux designer</p>
+          <p id="info">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate repellendus officiis odio, atque rerum sit dolores laudantium nobis voluptatem totam ab consectetur doloremque molestiae, accusamus dolore. Minima sequi iste magni!</p>
+          <!-- previous and next buttons -->
+          <div class="button-container">
+            <button class="prev-btn">
+              <i class="fas fa-arrow-left"></i>
+            </button>
+            <button class="next-btn">
+              <i class="fas fa-arrow-right"></i>
+            </button>
+          </div>
+          <!-- new button  -->
+          <button class="random-btn">surprise me</button>
+        </article>
+      </section>
+    </main>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
