--- a/04-navbar/setup/index.html
+++ b/04-navbar/setup/index.html
@@ -9,12 +9,47 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
     />
-
     <!-- styles -->
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>navbar project</h1>
+    <nav>
+      <div class="nav-center">
+        <!-- Navigation Header -->
+        <div class="nav-header">
+          <img src="./logo.svg" alt="Logo" class="logo">
+          <button class="nav-toggle">
+            <span class="fas fa-bars"></span>
+          </button>
+        </div>
+        <!-- Navigation Links -->
+        <ul class="links">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+        <!-- Navigation Social Media Buttons -->
+        <ul class="social-icons">
+          <li><a href="https://www.twitter.com" target="_blank">
+            <span class="fab fa-facebook"></span></a>
+          </li>
+          <li><a href="https://www.twitter.com" target="_blank">
+            <span class="fab fa-twitter"></span></a>
+          </li>
+          <li><a href="https://www.twitter.com" target="_blank">
+            <span class="fab fa-behance"></span></a>
+          </li>
+          <li><a href="https://www.twitter.com" target="_blank">
+            <span class="fab fa-linkedin"></span></a>
+          </li>
+          <li><a href="https://www.twitter.com" target="_blank">
+            <span class="fab fa-sketch"></span></a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
