--- a/05-sidebar/setup/index.html
+++ b/05-sidebar/setup/index.html
@@ -14,7 +14,42 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>sidebar project</h1>
+    <button class="sidebar-toggle">
+      <span class="fas fa-bars"></span>
+    </button>
+    <aside class="sidebar">
+      <div class="sidebar-header">
+        <img src="./logo.svg" alt="Logo" class="logo">
+        <button class="close-btn">
+          <span class="fas fa-times"></span>
+        </button>
+      </div>
+    <!-- Navigation Links -->
+    <ul class="links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="projects.html">Projects</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+    <!-- Navigation Social Media Buttons -->
+    <ul class="social-icons">
+      <li><a href="https://www.twitter.com" target="_blank">
+        <span class="fab fa-facebook"></span></a>
+      </li>
+      <li><a href="https://www.twitter.com" target="_blank">
+        <span class="fab fa-twitter"></span></a>
+      </li>
+      <li><a href="https://www.twitter.com" target="_blank">
+        <span class="fab fa-behance"></span></a>
+      </li>
+      <li><a href="https://www.twitter.com" target="_blank">
+        <span class="fab fa-linkedin"></span></a>
+      </li>
+      <li><a href="https://www.twitter.com" target="_blank">
+        <span class="fab fa-sketch"></span></a>
+      </li>
+    </ul>
+    </aside>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
