--- a/06-modal/setup/index.html
+++ b/06-modal/setup/index.html
@@ -14,6 +14,22 @@
   </head>
   <body>
     <h1>modal project</h1>
+    <!-- hero -->
+    <header class="hero">
+      <div class="banner">
+        <h1>Modal Project</h1>
+        <button class="btn modal-btn">Open Modal</button>
+      </div>
+    </header>
+    <!-- end of hero -->
+    <!-- modal -->
+    <div class="modal-overlay">
+      <div class="modal-container">
+        <h3>Modal Content</h3>
+        <button class="close-btn"><span class="fas fa-times"></span></button>
+      </div>
+    </div>
+
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
