Complete 07-questions (was difficult)

--- a/07-questions/setup/index.html
+++ b/07-questions/setup/index.html
@@ -18,7 +18,64 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>questions project</h1>
+    <section class="questions">
+      <!-- title -->
+      <div class="title">
+        <h2>General Questions</h2>
+      </div>
+      <!-- questions -->
+      <div class="section-center">
+        <!-- start of question -->
+        <article class="question">
+          <!-- question title -->
+          <div class="question-title">
+            <p>Do you accept crypto currency?</p>
+            <button type="button" class="question-btn">
+              <span class="plus-icon far fa-plus-square"></span>
+              <span class="minus-icon far fa-minus-square"></span>
+            </button>
+          </div>
+          <!-- question text -->
+          <div class="question-text">
+            <p>Yes. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia est blanditiis quo sit, saepe aliquid harum neque voluptas doloribus autem a alias delectus, soluta quia commodi. Distinctio possimus dolore doloribus?</p>
+          </div>
+        </article>
+        <!-- end of question -->
+        <!-- start of question -->
+        <article class="question">
+          <!-- question title -->
+          <div class="question-title">
+            <p>Do you support local sellers?</p>
+            <button type="button" class="question-btn">
+              <span class="plus-icon far fa-plus-square"></span>
+              <span class="minus-icon far fa-minus-square"></span>
+            </button>
+          </div>
+          <!-- question text -->
+          <div class="question-text">
+            <p>Yes. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia est blanditiis quo sit, saepe aliquid harum neque voluptas doloribus autem a alias delectus, soluta quia commodi. Distinctio possimus dolore doloribus?</p>
+          </div>
+        </article>
+        <!-- end of question -->
+        <!-- start of question -->
+        <article class="question">
+          <!-- question title -->
+          <div class="question-title">
+            <p>Do you sort plastic waste?</p>
+            <button type="button" class="question-btn">
+              <span class="plus-icon far fa-plus-square"></span>
+              <span class="minus-icon far fa-minus-square"></span>
+            </button>
+          </div>
+          <!-- question text -->
+          <div class="question-text">
+            <p>Yes. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia est blanditiis quo sit, saepe aliquid harum neque voluptas doloribus autem a alias delectus, soluta quia commodi. Distinctio possimus dolore doloribus?</p>
+          </div>
+        </article>
+        <!-- end of question -->
+      </div>
+    </section>
+    
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
