--- a/08-menu/setup/index.html
+++ b/08-menu/setup/index.html
@@ -13,7 +13,41 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>menu project</h1>
+    <!-- whole menu -->
+    <section class="menu">
+      <!-- <p>Experimenting with functions</p>
+      <button class="btn">Click me</button> -->
+      <!-- title -->
+      <div class="title">
+        <h2>Our menu</h2>
+        <div class="underline"></div>
+      </div>
+      <!-- filter buttons -->
+      <div class="btn-container">
+        <!-- <button> tags are generated dynamically using JS -->
+      </div>
+      <!-- menu items -->
+      <div class="section-center">
+        <!-- single item -->
+
+        <!-- Menu items  are generated dynamically using JS -->
+        
+        <!-- <article class="menu-item">
+          <img src="./menu-item.jpeg" alt="menu item" class="photo">
+          <div class="item-info">
+            <header>
+              <h4>buttermilk pancakes</h4>
+              <h4 class="price">$15</h4>
+            </header>
+            <p class="item-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam repellendus quas dolorem quidem error, aliquid delectus quaerat autem eligendi odio!</p>
+          </div>
+        </article> -->
+        <!-- end of single item -->
+      </div>
+      <!-- end of menu items -->
+    </section>
+    <!-- end of the whole menu -->
+    
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
