--- a/09-video/setup/index.html
+++ b/09-video/setup/index.html
@@ -9,7 +9,26 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>video project</h1>
+    <!-- preloader -->
+    <div class="preloader">
+      <img src="./preloader.gif" alt="preloader (animated picture)">
+      <img src="./logo.svg" alt="logo">
+    </div>
+    <!-- header -->
+    <header>
+      <video src="./video.mp4" class="video-container" controls muted autoplay loop>
+        <!-- <source  type="video/mp4"> -->
+      </video>
+      <h1>video project</h1>
+
+      <!-- video switch -->
+      <button class="switch-btn">
+        <span>play</span>
+        <span>pause</span>
+        <span class="switch"></span>
+      </button>
+    </header>
+
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
