--- a/10-scroll/setup/index.html
+++ b/10-scroll/setup/index.html
@@ -21,7 +21,9 @@
         <div class="nav-center">
           <!-- nav header -->
           <div class="nav-header">
-            <img src="./logo.svg" alt="logo" class="logo">
+            <a href="#home">
+              <img src="./logo.svg" alt="logo" class="logo">
+            </a>
             <button class="nav-toggle">
               <span class="fas fa-bars"></span>
             </button>
