--- a/12-countdown-timer/setup/index.html
+++ b/12-countdown-timer/setup/index.html
@@ -3,13 +3,46 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Countdown</title>
+    <title>Countdown Project</title>
 
     <!-- styles -->
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>countdown timer project</h1>
+    <section class="section-center">
+      <article class="gift-img">
+        <img src="./gift.jpeg" alt="gift picture">
+      </article>
+      <article class="gift-info">
+        <h3>Not very new iPhone giveaway</h3>
+        <h4 class="giveaway">Giveaway ends on Sunday, January 23,
+          at 23:59.
+        </h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque tenetur incidunt autem officia veniam maiores fuga necessitatibus aspernatur iusto nesciunt ratione reprehenderit ipsa minus, impedit perferendis quibusdam laborum sequi? Quidem omnis necessitatibus ipsa laudantium ducimus soluta nam maiores officia incidunt.
+        </p>
+        <div class="deadline">
+          <div class="deadline-format">
+            <h4 class="days">3</h4>
+            <span>days</span>
+          </div>
+          <div class="deadline-format">
+            <div>
+              <h4 class="hours">12</h4>
+              <span>hours</span>
+            </div>
+          </div>
+          <div class="deadline-format">
+              <h4 class="minutes">34</h4>
+              <span>minutes</span>
+          </div>
+          <div class="deadline-format">
+              <h4 class="seconds">48</h4>
+              <span>seconds</span>
+          </div>
+        </div>
+      </article>
+    </section>
+    
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
