--- a/13-lorem-ipsum/setup/index.html
+++ b/13-lorem-ipsum/setup/index.html
@@ -9,7 +9,15 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>lorem ipsum project</h1>
+    <section class="section-center">
+      <h3>Generate some Lorem Ipsum</h3>
+      <form class="lorem-form">
+        <label for="amount">Paragraphs:</label>
+        <input type="number" id="amount" name="amount" placeholder="5">
+        <button type="submit" class="btn">Generate</button>
+      </form>
+      <article class="lorem-text">Text will appear here.</article>
+    </section>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
