--- a/15-slider/setup/index.html
+++ b/15-slider/setup/index.html
@@ -9,8 +9,30 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>slider project</h1>
-
+    <div class="slider-container">
+      <div class="slide">
+        <img src="./img-1.jpeg" alt="picture with a beach" class="slide-img">
+        <h1>1</h1>
+      </div>
+      <div class="slide">
+        <h1>2</h1>
+      </div>
+      <div class="slide">
+        <img src="./img-2.jpeg" alt="picture with a pineapple in sunglasses" class="slide-img">
+        <h1>3</h1>
+      </div>
+      <div>
+        <div class="slide">
+          <img src="./person-1.jpeg" alt="picture with a person" class="person-img">
+          <h4>Susan Doe</h4>
+          <h1>4</h1>
+        </div>
+      </div>
+    </div>
+    <div class="btn-container">
+      <button type="button" class="prev-btn">Prev</button>
+      <button type="button" class="next-btn">Next</button>
+    </div>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
